--- a/HTML-TESINA-Udito-PriviteraLuca.html
+++ b/HTML-TESINA-Udito-PriviteraLuca.html
@@ -117,7 +117,7 @@
     </TR>
 </TABLE>
 </TD>
-<TD>  <IMG align="right" border="3" src="Udito_1.jpg" height="250px" width="350px"> </TD>
+<TD>  <IMG align="right" border="3" src="udito_1.jpg" height="250px" width="350px"> </TD>
 </TR>
 </TABLE>
 </P>
